--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "fumadocs-ui": "8.2.0",
     "fumadocs-core": "8.2.0",
+    "fumadocs-mdx": "8.0.3",
+    "fumadocs-ui": "8.2.0",
+    "next": "14.0.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "fumadocs-mdx": "8.0.3"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/mdx": "2.0.10",
+    "@types/node": "20.11.19",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
-    "typescript": "5.3.3",
-    "@types/mdx": "2.0.10"
+    "typescript": "5.3.3"
   }
 }
