fix GHA: remove export step, already included in build

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -61,9 +61,7 @@ jobs:
       - name: Install dependencies
         run: pnpm i
       - name: Build with Next.js
-        run: pnpm next build
-      - name: Static HTML export with Next.js
-        run: pnpm next export
+        run: pnpm build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
