--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -48,6 +48,8 @@ jobs:
           #
           # You may remove this line if you want to manage the configuration yourself.
           static_site_generator: next
+      - name: print config
+        run: cat next.config.js
       - name: Restore cache
         uses: actions/cache@v4
         with:
