--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -41,7 +41,7 @@ jobs:
           version: 8.x
           run_install: false
       - name: print config
-        run: cat next.config.js
+        run: cat next.config.mjs
       - name: Restore cache
         uses: actions/cache@v4
         with:
