--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fumadocs-core": "8.2.0",
     "fumadocs-mdx": "8.0.3",
     "fumadocs-ui": "8.2.0",
+    "lucide-react": "^0.331.0",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
