--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
-  "name": "root-docs",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "build": "next build",
-    "dev": "next dev",
-    "algolia": "node ./.github/algoliaSync.mjs",
-    "spell": "cspell --config .cspell.json --quiet --gitignore '*' 'content/**/*.mdx' 'app/**/*' 'components/**/*'"
-  },
-  "dependencies": {
-    "algoliasearch": "^4.22.1",
-    "fumadocs-core": "8.2.0",
-    "fumadocs-mdx": "8.0.3",
-    "fumadocs-ui": "8.2.0",
-    "lucide-react": "^0.331.0",
-    "next": "14.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@types/mdx": "2.0.11",
-    "@types/node": "20.11.19",
-    "@types/react": "18.2.55",
-    "@types/react-dom": "18.2.19",
-    "cspell": "^8.3.2",
-    "typescript": "5.3.3"
-  }
+	"name": "root-docs",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"build": "next build",
+		"dev": "next dev",
+		"algolia": "node ./.github/algoliaSync.mjs",
+		"tsc": "tsc --noEmit",
+		"format": "prettier --check '**/*.ts' '**/*.json' '**/*.yml' '**/*.mjs' 'content/**/*.mdx' --config .prettierrc.json --log-level warn",
+		"format:fix": "prettier --write '**/*.ts' '**/*.json' '**/*.yml' '**/*.mjs' 'content/**/*.mdx' --config .prettierrc.json --log-level warn",
+		"spell": "cspell --config .cspell.json --quiet --gitignore '*' 'content/**/*.mdx' 'app/**/*' 'components/**/*'"
+	},
+	"dependencies": {
+		"algoliasearch": "^4.22.1",
+		"fumadocs-core": "8.2.0",
+		"fumadocs-mdx": "8.0.3",
+		"fumadocs-ui": "8.2.0",
+		"lucide-react": "^0.331.0",
+		"next": "14.1.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"zod": "3.22.4"
+	},
+	"devDependencies": {
+		"@types/mdx": "2.0.11",
+		"@types/node": "20.11.19",
+		"@types/react": "18.2.55",
+		"@types/react-dom": "18.2.19",
+		"cspell": "^8.3.2",
+		"eslint-plugin-mdx": "^3.1.5",
+		"prettier": "^3.2.5",
+		"typescript": "5.3.3"
+	}
 }
