--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,5 +36,8 @@
 	"files.associations": {
 		"**/.github/**/*.yml": "github-actions-workflow"
 	},
-	"typescript.tsdk": "node_modules/typescript/lib"
+	"typescript.tsdk": "node_modules/typescript/lib",
+	"[markdown]": {
+		"editor.wordWrap": "on",
+	}
 }
