--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,7 +37,7 @@
 		"**/.github/**/*.yml": "github-actions-workflow"
 	},
 	"typescript.tsdk": "node_modules/typescript/lib",
-	"[markdown]": {
+	"[mdx]": {
 		"editor.wordWrap": "on",
 	}
 }
