--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
 		"@types/node": "20.11.19",
 		"@types/react": "18.2.55",
 		"@types/react-dom": "18.2.19",
+		"autoprefixer": "^10.4.17",
 		"cspell": "^8.3.2",
 		"eslint-plugin-mdx": "^3.1.5",
+		"postcss": "^8.4.35",
 		"prettier": "^3.2.5",
+		"tailwindcss": "^3.4.1",
 		"typescript": "5.3.3"
 	}
 }
