Update word wrap settings in .vscode/settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,7 @@
 	},
 	"typescript.tsdk": "node_modules/typescript/lib",
 	"[mdx]": {
-		"editor.wordWrap": "on",
+		"editor.wordWrapColumn": 100,
+		"editor.wordWrap": "bounded"
 	}
 }
